--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Public+Sans:wght@300;400;500;600;700;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
   top: 0;
   left: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
 }
 
 .header {
@@ -41,7 +47,7 @@ section {
 }
 
 .input--text {
-  font-family: "Karla", sans-serif;
+  font-family: 'Poppins', sans-serif;
   border-radius: 5px;
   border: 1px solid #d5d4d8;
   text-indent: 5px;
@@ -54,4 +60,12 @@ section {
   background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
   color: white;
   cursor: pointer;
+}
+.meme--img{
+  margin-top: 20px;
+  width: 100%;
+  height: 500px;
+}
+.meme--img img{
+  max-width: 500px;
 }
