--- a/src/index.css
+++ b/src/index.css
@@ -11,61 +11,21 @@
 body {
   font-family: 'Poppins', sans-serif;
 }
-
-.header {
-  display: flex;
-  align-items: center;
-  height: 65px;
-  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
-  color: white;
-  padding: 20px;
+main{
+  margin: 20px;
 }
 
-.header--image {
-  height: 100%;
-  margin-right: 6px;
+.box{
+  width: 100px;
+  height: 100px;
+  display: inline-block;
+  border: 1px solid #000;
+  margin-right: 10px;
+  border-radius: 10px;
 }
-
-.header--title {
-  font-size: 1.25rem;
-  margin-right: auto;
-}
-
-.header--project {
-  font-size: 0.75rem;
-  font-weight: 500;
-}
-
-section {
-  padding: 40px;
-}
-
-.form {
+/* .boxes{
   display: grid;
-  grid-template: 40px 40px / 1fr 1fr;
-  gap: 17px;
-}
-
-.input--text {
-  font-family: 'Poppins', sans-serif;
-  border-radius: 5px;
-  border: 1px solid #d5d4d8;
-  text-indent: 5px;
-}
-
-.input--button {
-  grid-column: 1/-1;
-  border-radius: 5px;
-  border: none;
-  background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
-  color: white;
-  cursor: pointer;
-}
-.meme--img{
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
   margin-top: 20px;
-  width: 100%;
-  height: 500px;
-}
-.meme--img img{
-  max-width: 500px;
-}
+} */
