--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+  padding: 20px;
 }
 main{
   margin: 20px;
@@ -22,6 +23,11 @@ main{
   border: 1px solid #000;
   margin-right: 10px;
   border-radius: 10px;
+}
+
+input{
+  display: block;
+  width: 200px;
 }
 /* .boxes{
   display: grid;
