--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@
 
 body {
   font-family: 'Poppins', sans-serif;
-  padding: 20px;
+  padding: 50px;
+  background-color: purple;
 }
 main{
   margin: 20px;
@@ -24,10 +25,50 @@ main{
   margin-right: 10px;
   border-radius: 10px;
 }
-
-input{
+form{
+  top: 50;
+  left: 50;
+  transform: translate(-50% -50%);
+  background-color: #fff;
+  border-radius: 5px;
+  padding: 80px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+input[type="email"],input[type="text"],input[type="password"], textarea{
   display: block;
-  width: 200px;
+  margin-bottom: 15px;
+  text-indent: 10px;
+  border-radius: 5px;
+  border: 1px solid #444;
+  height: 50px;
+  max-width: 400px;
+  font-size: 24px;
+}
+input[type="radio"]{
+  margin: 0 15px;
+}
+input[type="checkbox"]{
+  margin-right: 15px;
+  display: inline-block;
+}
+fieldset{
+  width: 300px;
+}
+legend{
+  text-align: center;
+}
+button{
+  width: 100px;
+  padding: 10px;
+  border-radius: 5px;
+  color: #fff;
+  background-color: purple;
+  outline: none;
+  border: none;
 }
 /* .boxes{
   display: grid;
